--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "react-icons": "^4.7.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
